src/ui/line/snapshots/rgr__ui__line__item__tests__line_numbers_with_line_wrap_multi_submatch_input_replacement_multiline.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_MATCH_LINE_WRAP_MULTI).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("1:").dark_gray(),
        Span::from("foo foo foo foo foo "),
        Span::from("bar").red().crossed_out(),
        Span::from("zip").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("zap").green(),
        Span::from(" foo foo foo foo foo "),
        Span::from("bar").red().crossed_out(),
        Span::from("zip").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("zap").green(),
        Span::from(" foo foo foo foo foo "),
        Span::from("bar").red().crossed_out(),
        Span::from("zip").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("zap").green(),
        Span::from(" foo foo foo foo foo "),
        Span::from("bar").red().crossed_out(),
        Span::from("zip").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("zap").green(),
        Span::from(" foo foo foo foo foo "),
        Span::from("bar").red().crossed_out(),
        Span::from("zip").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("zap").green(),
        Span::from(" foo foo foo foo foo "),
        Span::from("bar").red().crossed_out(),
        Span::from("zip").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("zap").green(),
        Span::from(" foo foo foo foo foo "),
        Span::from("bar").red().crossed_out(),
        Span::from("zip").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("zap").green(),
        Span::default(),
    ]),
]
