src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_line_wrapping_input_replacement-2.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_CONTEXT_LINE_WRAP).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("4:").dim(),
        Span::from("123456789!123456789@123456789#123456789$123456789%123456789^123456789&12345678"),
    ]),
    Line::from("9*123456789(123456789_a_context_line"),
]
