src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_line_wrapping_input_replacement.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_MATCH_LINE_WRAP).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("3:").dark_gray(),
        Span::from("123456789!123456789@123456789#123456789$123456789%123456789^123456789&12345678"),
    ]),
    Line::from_iter([
        Span::from("9*123456789(123456789_"),
        Span::from("one_hundred").red().crossed_out(),
        Span::from("foobar").green(),
        Span::from("_characters_wowzers"),
    ]),
]
