src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_multiline_confirm_replacement_with_multiline_matches.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_MATCH_MULTILINE).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("3:").dark_gray(),
        Span::from("baz "),
        Span::from("foobar").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("baz").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("asdf").green(),
        Span::from(" bar "),
        Span::from("foobar").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("baz").green(),
    ]),
    Line::from_iter([
        Span::from("+:").dark_gray(),
        Span::from("asdf").green(),
        Span::default(),
    ]),
]
